test_suite/tests/ui/expected-string/byte_string.rs
use serde_derive::Serialize;

#[derive(Serialize)]
struct S {
    #[serde(rename = b"byte string")]
    byte_string: (),
}

fn main() {}
